# trakt-letterboxd

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md
.forge/: docs-surfaces.yml  model-policy.yml
.github/workflows/: ci.yml
backlog/: notes.md
backlog/done/: FG-1-us-001-project-scaffold-and-configuration.md  FG-10-us-010-sync-to-letterboxd-command-t-to-l.md  FG-11-us-011-best-effort-diary-date-and-review-handling.md  FG-12-us-012-end-to-end-dry-run-and-run-reporting.md  FG-13-fg-ci-github-actions-ci-cargo-testclippyfmt-on-prs.md  FG-14-docs-readme-usage-guide-auth-sync-commands.md  FG-15-matching-two-pass-year-tolerance-recover-festival.md  FG-16-l-t-skip-films-already-in-trakt-history-to-avoid-d.md  FG-17-t-l-smart-export-skip-already-on-letterboxd-detect.md  FG-18-bug-t-l-tells-users-to-upload-the-watchlist-csv-to.md  FG-19-l-t-detect-bulk-date-dateless-watchedcsv-dont-back.md  FG-2-us-002-trakt-oauth-device-flow-authentication.md  FG-3-us-003-trakt-read-client.md  FG-4-us-004-trakt-write-client-with-rate-limit-handling.md  FG-5-us-005-letterboxd-export-csv-parser.md  FG-6-us-006-letterboxd-import-csv-generator.md  FG-7-us-007-cross-platform-film-matching-and-rating-con.md  FG-8-us-008-local-sync-state-store-for-idempotency.md  FG-9-us-009-sync-from-letterboxd-command-l-to-t.md
src/: auth.rs  config.rs  constants.rs  letterboxd_export.rs  letterboxd_import.rs  main.rs  matching.rs  rating.rs  sync_from_letterboxd.rs  sync_state.rs  sync_to_letterboxd.rs  trakt_client.rs  trakt_notes.rs  trakt_read.rs  trakt_write.rs
tests/: cli.rs
(+19 files in other folders)
