[package]
name = "trakt-letterboxd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trakt-letterboxd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
